--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
         </ol>
 
         <!-- Wrapper for Slides -->
@@ -82,11 +82,11 @@
                 <div class="fill" style="background-image:url('img/new1.jpg');">
                     <div class="carousel-caption">
                         <h1>Bridgelake Associates</h1>
+                        <!-- <img class="img-responsive img-centered" src="img/logo/bla1.png" alt="" width="300px" height="300px"> -->
                         <p class="slider-subhead">
-                        This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies.
-                        Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
+                        We are able provide long-term economic benefits for our clients by helping them optimize their operations with analytical tools. Bridgleake Associates ensures companies make sense of their valuable data by providing business intelligence and analytics which increases their competitive advantage in the marketplace.
                         </p>
-                        <a class="btn btn-large btn-primary" href="#">Learn More</a>
+                        <a class="btn btn-large btn-primary" href="about.html">Learn More</a>
                     </div> 
                 </div>
 
@@ -95,26 +95,28 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/new2.jpg');">
                     <div class="carousel-caption">
-                        <h1>We are Bridgelake Associates</h1>
+                        <h1>Partners</h1>
+                        <img src="img/tedx.png">
+                        <br><br>
                          <p class="slider-subhead">
-                        Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
+                        TEDxAccra’s mission of “Ideas worth Spreading” reaches far beyond the conference and video series, encompassing a variety of projects and initiatives that leverage the power of ideas. 
                         </p>
                     </div>
                 </div>
 
             </div>
-            <div class="item">
+            <!-- <div class="item"> -->
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('img/bus2.jpg');">
-                    <div class="carousel-caption">
+                <!-- <div class="fill" style="background-image:url('img/bus2.jpg');"> -->
+                   <!--  <div class="carousel-caption">
                         <h1>This is Bridgelake Associates</h1>
                          <p class="slider-subhead">
                         This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies. 
                         Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
                         </p>
-                    </div>
-                </div>
-            </div>
+                    </div> -->
+                <!-- </div> -->
+            <!-- </div> -->
         </div>
 
         <!-- Controls -->
@@ -145,7 +147,7 @@
         </div>
     </section>
 
-    <section class="section-content blue-bg box-inset-top ">
+    <section class="section-content blue-bg box-inset-top " id="">
         <div class="container">
             <div class="section-title text-center">  
                 <h2 class="heading-white">Services</h2> 
@@ -287,7 +289,7 @@
 				<!-- Section title -->
 				<div class="element-line">
 					<!-- form contact -->
-					<form id="user_submit_form" name="user_submit_form" action="http://formspree.io/bridgelakeassoc@gmail.com" method="POST">
+					<form id="user_submit_form" name="user_submit_form"  action="http://formspree.io/bridgelakeassoc@gmail.com" method="POST">
 						<!-- <form name="user_submit_form" id="user_submit_form" onSubmit="return false" role="form">-->
 
 <!-- <form action="//formspree.io/bridgelakeassoc@gmail.com"
@@ -374,8 +376,9 @@
     	</div>	
 
     	<div class="container map-container">
-            <div id="map"></div>
-            <div class="map-overlay"></div>
+            <!-- <div id="map"></div> -->
+            <!-- <div class="map-overlay"></div> -->
+            <img src="img/map.png" class="img-responsive">
     	</div>
 
     	<div class="container">
